force-app/main/default/objects/GSI_BDM_GAM_Mapping__c/GSI_BDM_GAM_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GSI BDM/GAM Mapping</label>
</CustomObject>