force-app/main/default/objects/GSI_BDM_GAM_Mapping__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>