force-app/main/default/objects/GSI_BDM_GAM_Mapping__c/fields/BDM_Name__c.field-meta.xml
<CustomField>
    <fullName>BDM_Name__c</fullName>
    <label>BDM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>