force-app/main/default/objects/GSI_BDM_GAM_Mapping__c/fields/GAM_Id__c.field-meta.xml
<CustomField>
    <fullName>GAM_Id__c</fullName>
    <label>GAM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>