force-app/main/default/objects/GSI_BDM_GAM_Mapping__c/fields/GAM_Name__c.field-meta.xml
<CustomField>
    <fullName>GAM_Name__c</fullName>
    <label>GAM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>